Better looking sentences

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
         <div class="reveal">
             <div class="slides">
                 <section>
-                    Robot with right arm grasps the toolbox handle.
+                    The robot, with its right arm, grasps the toolbox handle.<br>
                     <img src="./images/keyframe0.jpg"/>
                 </section>
                 <section>
-                    Robot with right arm hands over the toolbox handle to Human with right arm.
+                    The robot, with its right arm, hands over the toolbox handle to the agent's right hand.<br>
                     <img src="./images/keyframe1.jpg"/>
                 </section>
             </div>
