Presentation with 3 actions

--- a/index.html
+++ b/index.html
@@ -22,8 +22,12 @@
                     <img src="./images/keyframe0.jpg"/>
                 </section>
                 <section>
-                    The robot, with its right arm, hands over the toolbox handle to the agent's right hand.<br>
+                    The robot, with its right arm, places the toolbox handle on the front table.<br>
                     <img src="./images/keyframe1.jpg"/>
+                </section>
+                <section>
+                    The agent, with his or her right hand, grasps the toolbox handle.<br>
+                    <img src="./images/keyframe2.jpg"/>
                 </section>
             </div>
         </div>
