Add the videos in the presentation

--- a/index.html
+++ b/index.html
@@ -19,15 +19,21 @@
             <div class="slides">
                 <section>
                     The robot, with its right arm, grasps the toolbox handle.<br>
-                    <img src="./images/keyframe0.jpg"/>
+                    <video poster="./images/keyframe0.jpg" onclick="this.play()"/>
+                        <source data-src="./videos/keystep0.webm" type="video/webm"/>
+                    </video>
                 </section>
                 <section>
                     The robot, with its right arm, places the toolbox handle on the front table.<br>
-                    <img src="./images/keyframe1.jpg"/>
+                    <video poster="./images/keyframe1.jpg" onclick="this.play()"/>
+                        <source data-src="./videos/keystep1.webm" type="video/webm"/>
+                    </video>
                 </section>
                 <section>
                     The agent, with his or her right hand, grasps the toolbox handle.<br>
-                    <img src="./images/keyframe2.jpg"/>
+                    <video poster="./images/keyframe2.jpg" onclick="this.play()"/>
+                        <source data-src="./videos/keystep2.webm" type="video/webm"/>
+                    </video>
                 </section>
             </div>
         </div>
