New simulation with more plausable arm

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
         <div class="reveal">
             <div class="slides">
                 <section>
-                    The robot, with its right arm, grasps the toolbox handle.<br>
+                    The robot, with its left arm, grasps the toolbox handle.<br>
                     <video poster="./images/keyframe0.jpg" onclick="this.play()"/>
                         <source data-src="./videos/keystep0.webm" type="video/webm"/>
                     </video>
                 </section>
                 <section>
-                    The robot, with its right arm, places the toolbox handle on the front table.<br>
+                    The robot, with its left arm, places the toolbox handle on the front table.<br>
                     <video poster="./images/keyframe1.jpg" onclick="this.play()"/>
                         <source data-src="./videos/keystep1.webm" type="video/webm"/>
                     </video>
